--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             <option value="vw">VW</option>
                         </select>
                     </div><br>
-                    <button onclick="sizes()" id="mybtn">Send</button>
+                    <button onclick="sizes()" id="mybtn" class="hes">Send</button>
                 </div>
                 <div class="colors">
                     <label for="color">Color :</label>
@@ -127,7 +127,7 @@
             </div>
         </div>
     </div>
-    <a href="index.html"><input type="reset" onclick="reset()" value="Reset"></a>
+    <a href="index.html" id="as1"><input type="reset" onclick="reset()" value="Reset"></a>
 </body>
 </html>
 
